# pg_extension

./: .clang-tidy  .gitignore  README.md  REUSE.toml  flake.nix  meson.build  package.json  pg_extension.control.in
.github/: dependabot.yaml
.github/workflows/: alejandra.yaml  builds.yaml  check-flake.yaml  codeql.yaml  markdownlint.yaml  prettier.yaml  reuse.yaml  shellcheck.yaml  shfmt.yaml
nix/: pg_config_wrapper.sh
scripts/: shellcheck.sh  shfmt.sh
sql/: pg_extension.sql
src/: extension.c
